<resources>
    <string name="app_name">EPF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_dividend">Dividend</string>
    <string name="menu_investment">Investment</string>

    <string name="slogan">Safeguarding Your Future</string>
    <string name="logo">EPF Logo</string>
    <string name="aim">Realising returns and enabling better access to your accounts</string>
    <string name="dividend_2022">Dividend 2022</string>
    <string name="dividend_message">For all your contributions, the government guarantees a minimum paid dividend rate of 2.50% for Simpanan Konvensional.</string>
    <string name="investment_message">The investment of EPF are guided by its Strategic Asset Allocation (SAA) to optimise return within the funds risk tolerance limits and ensures that the strategic investment targets of EPF are met.</string>
    <string name="investment_heading">Invest a portion of your savings your way</string>
    <!--string name="dividend_2022_link">https://www.kwsp.gov.my/en/dividend</string-->
    <string name="year">Year</string>
    <string name="shariah">Shariah\n(Per Annum)</string>
    <string name="conventional">Conventional\n(Per Annum)</string>
    <string name="dob">Date of Birth</string>
    <string name="balance_account1">Balance in Account 1</string>
    <string name="investment_amount">Amount of Investment</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="age">Age</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>