<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="my.edu.tarc.epf.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="my.edu.tarc.epf.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="my.edu.tarc.epf.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_dividend"
        android:name="my.edu.tarc.epf.ui.dividend.DividendFragment"
        android:label="@string/menu_dividend"
        tools:layout="@layout/fragment_dividend" />
    <fragment
        android:id="@+id/nav_investment"
        android:name="my.edu.tarc.epf.ui.investment.InvestmentFragment"
        android:label="@string/menu_investment"
        tools:layout="@layout/fragment_investment" />
</navigation>